# vscode-urdf

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
client/: package-lock.json  package.json  tsconfig.json
client/src/: extension.ts
examples/: sample.urdf
install/: local_setup.sh  setup.sh
log/: latest_build
server/: Cargo.toml
server/src/: diagnostics.rs  document.rs  features.rs  main.rs  stress.rs  workspace.rs  xacro_eval.rs
snippets/: snippets.json
syntaxes/: urdf.tmLanguage.json
